--- a/Relaxr.html
+++ b/Relaxr.html
@@ -8,8 +8,9 @@
   <body>
     <h2>Relaxr</h2>
     
-    <nav>
-      <ul>
+    <div id="menu">
+    <nav id="menu">
+      <ul id= "menu">
       <li><a href="index.html">Home</a>
       </li>
       <li>
@@ -20,6 +21,7 @@
       </li>
       </ul>
     </nav>
+    </div>
     
   </body>
   
