--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,8 +8,9 @@
   <body>
     <h2>Our Work</h2>
     
-    <nav>
-      <ul>
+    <div id="menu">
+    <nav id="menu">
+      <ul id= "menu">
       <li><a href="index.html">Home</a>
       </li>
       <li>
@@ -20,6 +21,7 @@
       </li>
       </ul>
     </nav>
+    </div>
     
     <h2>Recent Work</h2>
     <ul>
