--- a/Startup.html
+++ b/Startup.html
@@ -9,8 +9,9 @@
   <body>
     <h2>Startup Matchmaker</h2>
     
-    <nav>
-      <ul>
+    <div id="menu">
+    <nav id="menu">
+      <ul id= "menu">
       <li><a href="index.html">Home</a>
       </li>
       <li>
@@ -21,6 +22,7 @@
       </li>
       </ul>
     </nav>
+    </div>
     
     <img src="startup_matchmaker_deliverable.png">
   </body>
