--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,9 @@
   <body>
     <h2>About DJ PR</h2>
     
-    <nav>
-      <ul>
+    <div id="menu">
+    <nav id="menu">
+      <ul id= "menu">
       <li><a href="index.html">Home</a>
       </li>
       <li>
@@ -20,6 +21,7 @@
       </li>
       </ul>
     </nav>
+    </div>
     
     <p>
       DJ PR is a boutique Melbourne PR firm specialising in assisting Australian tech start-ups make that first big impact.
