--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,16 +8,21 @@
   <body>
     <h2>Our Work</h2>
     
-    <div id="menu">
-    <nav id="menu">
+
+    <div id= "menu">
+    <nav>
       <ul id= "menu">
-      <li><a href="index.html">Home</a>
+      <li id= "menu">
+        <a id= "menu" href="index.html">Home</a>
       </li>
       <li>
         <a href="aboutme.html">About Me</a>
       </li>
       <li>
-      <a href="Portfolio.html">Portfolio of Work</a>
+      <a href="Portfolio.html">Portfolio</a>
+      </li>
+      <li>
+        <a href="contactus.html">Contact</a>
       </li>
       </ul>
     </nav>
@@ -35,8 +40,11 @@
         <a href="Citipix.html">Citipix</a>
       </li>
     </ul>
-      Relaxr
-      <img src="relaxr_deliverable.png" alt="Relaxr Screen Shot">
 
+<div id="footer">
+    <footer>
+      Made by Dan Johnson 2015
+    </footer>
+    </div>
   </body>
 </html>
