--- a/Relaxr.html
+++ b/Relaxr.html
@@ -27,6 +27,8 @@
     </nav>
     </div>
     
+    <img src="relaxr_deliverable.png" alt="Relaxr screenshot">
+    
   <div id="footer">
     <footer>
       Made by Dan Johnson 2015
