--- a/contactus.html
+++ b/contactus.html
@@ -29,22 +29,22 @@
     </nav>
     </div>
 
-
-    <table>
+    <table align="center" cell-padding="4px">
       <tr>
-        <td>Adress</td>
+        <th>Adress</th>
         <td>123 Fake St, Candyland, VIC 3003</td>
       </tr>
       <tr>
-        <td>Phone</td>
+        <th>Phone</th>
         <td>0405 07 8686</td>
       </tr>
       <tr>
-        <td>Email</td>
+        <th>Email</th>
         <td>dan91johnson@gmail.com</td>
       </tr>
     </table>
 
+  
   <div id="footer">
     <footer>
       Made by Dan Johnson 2015
