--- a/Portfolio.html
+++ b/Portfolio.html
@@ -29,6 +29,8 @@
     </div>
     
     <h2>Recent Work</h2>
+    
+    <div id="projects">
     <ul>
       <li>
         <a href="Relaxr.html">Relaxr</a>
@@ -40,6 +42,7 @@
         <a href="Citipix.html">Citipix</a>
       </li>
     </ul>
+    </div>
 
 <div id="footer">
     <footer>
