--- a/Citipix.html
+++ b/Citipix.html
@@ -27,8 +27,14 @@
     </nav>
     </div>
     
-    
-    <img src="citipix_deliverable.png" alt="Citipix screenshot">
+    <table id="RSC">
+    <tr>
+    <td> <img src="citipix_deliverable.png" alt="Citipix screenshot"> </td>
+    <td id="Ptext" > Citipix is a revolutionary application that builds a story of your city!
+    Studies show people spend hours building their perfect story board of lifes activities, yet we spend just minutes veiwing them. Citipix 
+    is going to flip these numbers of their heads!</td>    
+    </tr>
+    </table>
   
   <div id="footer">
     <footer>
