--- a/Relaxr.html
+++ b/Relaxr.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="theme.css">
   </head>
   <body>
-    <h2>Relaxr</h2>
-    
+
+<header>   
 <div id= "menu">
     <nav>
       <ul id= "menu">
@@ -26,7 +26,10 @@
       </ul>
     </nav>
     </div>
-    
+</header>
+
+<h2>Relaxr</h2>
+
     <table id="RSC">
       <tr>
         <td> <img src="relaxr_deliverable.png" alt="Relaxr screenshot"> </td>
