--- a/Citipix.html
+++ b/Citipix.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="theme.css">
   </head>
   <body>
-    <h2>Citipix</h2>
-    
+ 
+<header>   
 <div id= "menu">
     <nav>
       <ul id= "menu">
@@ -26,7 +26,10 @@
       </ul>
     </nav>
     </div>
-    
+</header>
+
+  <h2>Citipix</h2>
+
     <table id="RSC">
     <tr>
     <td> <img src="citipix_deliverable.png" alt="Citipix screenshot"> </td>
