--- a/Startup.html
+++ b/Startup.html
@@ -7,8 +7,8 @@
   </head>
   
   <body>
-    <h2>Startup Matchmaker</h2>
-    
+
+<header>  
 <div id= "menu">
     <nav>
       <ul id= "menu">
@@ -27,7 +27,10 @@
       </ul>
     </nav>
     </div>
-    
+</header>
+
+<h2>Startup Matchmaker</h2>
+
   <table id="RSC">
     <tr>
       <td> <img src="startup_matchmaker_deliverable.png"> </td>
