--- a/contactus.html
+++ b/contactus.html
@@ -8,26 +8,29 @@
   </head>
   
   <body>
-    <h2>Contact Us</h2>
+   
+    <header>
+      <div id= "menu">
+      <nav>
+        <ul id= "menu">
+        <li id= "menu">
+          <a id= "menu" href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="aboutme.html">About Me</a>
+        </li>
+        <li>
+        <a href="Portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a href="contactus.html">Contact</a>
+        </li>
+        </ul>
+      </nav>
+      </div>
+    </header>
     
-    <div id= "menu">
-    <nav>
-      <ul id= "menu">
-      <li id= "menu">
-        <a id= "menu" href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="aboutme.html">About Me</a>
-      </li>
-      <li>
-      <a href="Portfolio.html">Portfolio</a>
-      </li>
-      <li>
-        <a href="contactus.html">Contact</a>
-      </li>
-      </ul>
-    </nav>
-    </div>
+   <h2>Contact Us</h2>
 
     <table align="center" cell-padding="4px">
       <tr>
@@ -40,7 +43,7 @@
       </tr>
       <tr>
         <th>Email</th>
-        <td>dan91johnson@gmail.com</td>
+        <td> <a href="mailto:dan91john@gmail.com">dan91johnson@gmail.com</a> </td>
       </tr>
     </table>
 
