--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,11 +8,10 @@
   <body>
     
 <header>
-    <div id= "menu">
-    <nav>
-      <ul id= "menu">
-      <li id= "menu">
-        <a id= "menu" href="index.html">Home</a>
+    <nav class="menu">
+      <ul>
+      <li>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="aboutme.html">About Me</a>
@@ -25,7 +24,6 @@
       </li>
       </ul>
     </nav>
-    </div>
 </header>
 
    <h2>Our Work</h2>
