--- a/Startup.html
+++ b/Startup.html
@@ -8,12 +8,11 @@
   
   <body>
 
-<header>  
-<div id= "menu">
-    <nav>
-      <ul id= "menu">
-      <li id= "menu">
-        <a id= "menu" href="index.html">Home</a>
+<header>
+    <nav class="menu">
+      <ul>
+      <li>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="aboutme.html">About Me</a>
@@ -26,7 +25,6 @@
       </li>
       </ul>
     </nav>
-    </div>
 </header>
 
 <h2>Startup Matchmaker</h2>
