--- a/aboutme.html
+++ b/aboutme.html
@@ -10,11 +10,10 @@
   <body>
    
 <header>
-   <div id= "menu">
-    <nav>
-      <ul id= "menu">
-      <li id= "menu">
-        <a id= "menu" href="index.html">Home</a>
+    <nav class="menu">
+      <ul>
+      <li>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="aboutme.html">About Me</a>
@@ -27,7 +26,6 @@
       </li>
       </ul>
     </nav>
-    </div>
 </header>
     
     <h2>About DJ PR</h2>
