--- a/contactus.html
+++ b/contactus.html
@@ -10,11 +10,10 @@
   <body>
    
     <header>
-      <div id= "menu">
-      <nav>
-        <ul id= "menu">
-        <li id= "menu">
-          <a id= "menu" href="index.html">Home</a>
+      <nav class="menu">
+        <ul>
+        <li>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="aboutme.html">About Me</a>
@@ -27,25 +26,17 @@
         </li>
         </ul>
       </nav>
-      </div>
-    </header>
+  </header>
     
    <h2>Contact Us</h2>
 
-    <table align="center" cell-padding="4px">
-      <tr>
-        <th>Adress</th>
-        <td>123 Fake St, Candyland, VIC 3003</td>
-      </tr>
-      <tr>
-        <th>Phone</th>
-        <td>0405 07 8686</td>
-      </tr>
-      <tr>
-        <th>Email</th>
-        <td> <a href="mailto:dan91john@gmail.com">dan91johnson@gmail.com</a> </td>
-      </tr>
-    </table>
+    <div class="contact">
+      <ul>
+        <li><span>Adress</span>123 Fake St, Candyland, VIC 3003</li>
+        <li><span>Phone</span>0405 07 8686</li>
+        <li><span>Email</span><a href="mailto:dan91john@gmail.com">dan91johnson@gmail.com</a></li>
+      </ul>
+    </div>
 
   
   <div id="footer">
