--- a/Relaxr.html
+++ b/Relaxr.html
@@ -7,12 +7,11 @@
   </head>
   <body>
 
-<header>   
-<div id= "menu">
-    <nav>
-      <ul id= "menu">
-      <li id= "menu">
-        <a id= "menu" href="index.html">Home</a>
+<header>
+    <nav class="menu">
+      <ul>
+      <li>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="aboutme.html">About Me</a>
@@ -25,7 +24,6 @@
       </li>
       </ul>
     </nav>
-    </div>
 </header>
 
 <h2>Relaxr</h2>
