--- a/Portfolio.html
+++ b/Portfolio.html
@@ -42,10 +42,12 @@
     </ul>
     </div>
 
-<div id="footer">
-    <footer>
-      Made by Dan Johnson 2015
-    </footer>
-    </div>
+        
+      <div id="footer">
+      <footer>
+        <div id="ftext">Made by Dan Johnson 2015</div>
+      </footer>
+      </div>
+ 
   </body>
 </html>
