--- a/contactus.html
+++ b/contactus.html
@@ -31,18 +31,41 @@
    <h2>Contact Us</h2>
 
     <div class="contact">
-      <ul>
-        <li><span>Adress</span>123 Fake St, Candyland, VIC 3003</li>
-        <li><span>Phone</span>0405 07 8686</li>
-        <li><span>Email</span><a href="mailto:dan91john@gmail.com">dan91johnson@gmail.com</a></li>
-      </ul>
+      
+      <div class="Table">
+          <div class="Row">
+              <div class="Cell">
+                  <p style=" font-weight: 700;">Address</p>
+              </div>
+              <div class="Cell">
+                  <p>123 Fake St, Candyland, VIC 3003</p>
+              </div>
+              </div>
+          <div class="Row">
+              <div class="Cell">
+                  <p style=" font-weight: 700;">Phone</p>
+              </div>
+              <div class="Cell">
+                  <p>0405 07 8686</p>
+              </div>
+          </div>
+          <div class="Row">
+              <div class="Cell">
+                  <p style=" font-weight: 700;">Email</p>
+              </div>
+              <div class="Cell">
+                  <p><a href=mailto:dan91johnon@gmail.com>dan91johnson@gmail.com</a> </p>
+              </div>
+          </div>
+      </div>
     </div>
 
-  
+        
   <div id="footer">
     <footer>
-      Made by Dan Johnson 2015
+      <div id="ftext">Made by Dan Johnson 2015</div>
     </footer>
-    </div>
+  </div>
+
   </body>
 </html>
