--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     
     <div id="footer">
     <footer>
-      Made by Dan Johnson 2015
+      <div id="ftext">Made by Dan Johnson 2015</div>
     </footer>
     </div>
   </body>
+
 </html>
