--- a/Citipix.html
+++ b/Citipix.html
@@ -37,10 +37,12 @@
     </tr>
     </table>
   
-  <div id="footer">
-    <footer>
-      Made by Dan Johnson 2015
-    </footer>
-    </div>
+        
+      <div id="footer">
+      <footer>
+        <div id="ftext">Made by Dan Johnson 2015</div>
+      </footer>
+      </div>
+ 
   </body>
 </html>
