--- a/Citipix.html
+++ b/Citipix.html
@@ -29,7 +29,7 @@
   <h2>Citipix</h2>
 
 
-  <div class="RSC">
+  <div id="RSC">
     <div>
       <div>
         <p><img src="citipix_deliverable.png" alt="Citipix screenshot"></p>
