--- a/Startup.html
+++ b/Startup.html
@@ -29,7 +29,7 @@
 
 <h2>Startup Matchmaker</h2>
 
-  <div class="RSC">
+  <div id="RSC">
     <div>
       <div>
         <p><img src="startup_matchmaker_deliverable.png"> </p>
