--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     
     
 
-  <div id="MC">
+  <div id="MC" style=" font-size: 15px;">
     <p>
-    <div id= "DJ">
-    <img class="DJ" src="dan.jpg" alt="Dan Johnson">
-    </div>
+      <div id= "DJ">
+        <img class="DJ" src="dan.jpg" alt="Dan Johnson">
+      </div>
       Welcome to my portfolio of work, I hope you enjoy.
     </p>
   </div>
